# nano33_ws2812b

./: Cargo.toml  Justfile  LICENSE  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/nano33demo/: Cargo.toml  build.rs  memory.x
examples/nano33demo/scripts/: udev_rules.sh
examples/nano33demo/src/: main.rs
scripts/: targets.sh
src/: device.rs  gpio.rs  lib.rs  main.rs  spi.rs
src/driver/: gpio.rs  mod.rs
