[package]
name = "nano33_baremetal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nano33_baremetal"
test = false
bench = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

nrf52840-pac = { version = "0.12", optional = true }

[features]
nrf52840 = ["nrf52840-pac/rt"]

# ---

[profile.release]
opt-level = 3
lto = true
strip = true
