[workspace]
members = ["examples/nano33demo"]

[package]
name = "nrf5x_ws2812b"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"

nrf52840-pac = { version = "0.12", optional = true }

[features]
nrf52840 = ["nrf52840-pac"]

# ---

[profile.release]
opt-level = 3
lto = true
strip = true
